Move README into standard directory, bring requirements.txt to top level. Add .gitignore (from integrationtest) and update setup.cfg to include version number and description.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,10 @@
 [metadata]
 name = connection-service
-url = https://github.com/DUNE-DAQ/microservices/tree/gcrone/ConnectivityService/connection-service
+version = 1.0.0
+url = https://github.com/DUNE-DAQ/connectivityserver
+long_description = file: docs/README.md
+long_description_content_type = text/markdown
+
 
 [options]
 packages = find:
