--- a/deploy/connectivityserver.yaml
+++ b/deploy/connectivityserver.yaml
@@ -31,9 +31,17 @@ spec:
         app.kubernetes.io/app: connectionservice
         app.kubernetes.io/component: connectionservice
     spec:
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: node-role.kubernetes.io/worker
+                operator: Exists
       containers:
       - image: docker.io/dunedaq/pocket-connectivityserver:1.0.0
         name: connectionservice
+        imagePullPolicy: Always
         ports:
         - containerPort: 5000
           name: http
